--- a/assets/scss/partials/_advertising.scss
+++ b/assets/scss/partials/_advertising.scss
@@ -4,7 +4,6 @@
     text-transform: uppercase;
 
     &__heading {
-        position: relative;
         font-size: 5rem;
         font-weight: 800;
         color: $primary-color;
@@ -15,14 +14,6 @@
 
         @include breakpoints(768px) {
             font-size: 2rem;
-        }
-
-        &::before {
-            position: absolute;
-            content: attr(data-text);
-            text-shadow: 0px 0px 20px $primary-color;
-            animation: flicker 2.5s;
-            animation-iteration-count: infinite;
         }
     }
 
@@ -37,6 +28,23 @@
 
         @include breakpoints(576px) {
             font-size: 1rem
+        }
+    }
+
+    &__exam {
+        @include flex(space-around, center, row wrap);
+
+        h5 {
+            font-size: 1.5rem;
+            margin-top: 20px;
+
+            @include breakpoints(576px) {
+                font-size: 1.2rem
+            }
+        }
+
+        p {
+            font-weight: 700;
         }
     }
 
